# AIDesk

./: .gitignore  README.md  README_TR.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
agent-runner/: package.json
agent-runner/src/: index.ts
aidesk-agent/: README.md  package.json
aidesk-agent/src/: client.ts  executor.ts  index.ts
docs/: index.html
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent/: mod.rs
src-tauri/src/api/: mod.rs
src-tauri/src/db/: mod.rs  models.rs  queries.rs
src-tauri/src/orchestrator/: mod.rs
src-tauri/src/vault/: mod.rs
src/components/: Logo.tsx  Sidebar.tsx
src/components/ui/: Badge.tsx  ConfirmDialog.tsx
src/hooks/: useConfirm.ts  useNotifications.ts  usePolling.ts  useTaskLogStream.ts  useTheme.tsx  useUpdater.ts
src/lib/: tauri.ts  theme.ts  types.ts  utils.ts
src/pages/: ActivityPage.tsx  AgentsPage.tsx  DashboardPage.tsx  ProjectsPage.tsx  SettingsPage.tsx  TasksPage.tsx
