[package]
name = "aidesk"
version = "0.1.0"
description = "AIDesk - Claude Code Agent Control Panel"
authors = ["ssilistre.dev"]
edition = "2021"

[lib]
name = "aidesk_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "aidesk"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
bcrypt = "0.15"
jsonwebtoken = "9"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
tokio-stream = "0.1"
async-stream = "0.3"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
